overflow fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -236,6 +236,7 @@ i {
   border: 1px solid var(--border-color);
   max-width: var(--mobile);
   margin: 0 auto;
+  width: 100%;
 }
 
 .account-conversation:hover {
